@@ -1,0 +1,2 @@
+timesheet_manager               = Timesheet Manager
+timesheet_user                  = Timesheet User
